--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,7 @@
 		"gitlens.codeLens.symbolScopes": [
 			"!Module"
 		],
-		"editor.formatOnType": true,
-		"editor.wordBasedSuggestions": "off",
-		"editor.defaultFormatter": "ms-python.black-formatter"
+		"editor.defaultFormatter": "ms-python.black-formatter",
+		"editor.formatOnSave": true
 	}
 }
